<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/margin_sixteen"
        android:hint="@string/edit_text_hint"
        android:importantForAutofill="no"
        android:layout_alignParentTop="true"
        android:inputType="number"
        android:padding="@dimen/padding_eight"
        android:background="@drawable/edit_text_border"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_one"
                android:text="@string/button_one"
                android:onClick="operationFunction"
                style="@style/button_style" />

            <Button
                android:id="@+id/button_two"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_two" />

            <Button
                android:id="@+id/button_three"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_three" />

            <Button
                android:id="@+id/button_divison"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:layout_marginEnd="@dimen/margin_eight"
                android:text="@string/button_divison" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_four"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_four" />

            <Button
                android:id="@+id/button_five"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_five" />

            <Button
                android:id="@+id/button_six"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_six" />

            <Button
                android:id="@+id/button_subtract"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"
                android:text="@string/button_subtract" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_seven"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_seven" />

            <Button
                android:id="@+id/button_eight"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_eight" />

            <Button
                android:id="@+id/button_nine"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_nine" />

            <Button
                android:id="@+id/button_addition"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"
                android:text="@string/button_addition" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/button_zero"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_zero" />

            <Button
                android:id="@+id/button_decimal"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_decimal" />

            <Button
                android:id="@+id/button_equality"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"
                android:text="@string/button_equality" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>